# PydanticAI-A2A-Poc

./: README.md  fasta2a_client.py  pyproject.toml  server.py  wrong_client.py
